# parquet-converter

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README-api.md  README-setup.md  README.md  _config.yml  config.template.json  pyproject.toml  requirements-dev.txt  requirements-lock.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml  publish.yml  release.yml  tests.yml
examples/: config.yaml  sample_data.csv  sample_data.txt
parquet_converter/: __init__.py  analyzer.py  cli.py  config.py  converter.py  logging.py  parser.py  stats.py
parquet_converter/tests/: __init__.py  test_analyzer.py  test_cli.py  test_config.py  test_converter.py  test_logging.py  test_performance.py
